src/maths_parser.output
Nonterminals useless in grammar

   FUNCTION_NAME


Terminals unused in grammar

   T_INT
   T_VOID
   T_RETURN


Rules useless in grammar

   16 FUNCTION_NAME: T_LOG
   17              | T_EXP
   18              | T_SQRT


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR

    2 EXPR: EXPR T_PLUS TERM
    3     | EXPR T_MINUS TERM
    4     | TERM

    5 TERM: TERM T_TIMES DEGREE
    6     | TERM T_DIVIDE DEGREE
    7     | DEGREE

    8 DEGREE: FACTOR T_EXPONENT DEGREE
    9       | FACTOR

   10 FACTOR: T_LBRACKET EXPR T_RBRACKET
   11       | T_EXP T_LBRACKET EXPR T_RBRACKET
   12       | T_LOG T_LBRACKET EXPR T_RBRACKET
   13       | T_SQRT T_LBRACKET EXPR T_RBRACKET
   14       | T_VARIABLE
   15       | T_NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258)
T_VOID (259)
T_RETURN (260)
T_TIMES (261) 5
T_DIVIDE (262) 6
T_PLUS (263) 2
T_MINUS (264) 3
T_EXPONENT (265) 8
T_LBRACKET (266) 10 11 12 13
T_RBRACKET (267) 10 11 12 13
T_LOG <string> (268) 12
T_EXP <string> (269) 11
T_SQRT <string> (270) 13
T_NUMBER <number> (271) 15
T_VARIABLE <string> (272) 14


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
ROOT (19)
    on left: 1, on right: 0
EXPR <expr> (20)
    on left: 2 3 4, on right: 1 2 3 10 11 12 13
TERM <expr> (21)
    on left: 5 6 7, on right: 2 3 4 5 6
DEGREE <expr> (22)
    on left: 8 9, on right: 5 6 7 8
FACTOR <expr> (23)
    on left: 10 11 12 13 14 15, on right: 8 9


State 0

    0 $accept: . ROOT $end

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    ROOT    go to state 7
    EXPR    go to state 8
    TERM    go to state 9
    DEGREE  go to state 10
    FACTOR  go to state 11


State 1

   10 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR    go to state 12
    TERM    go to state 9
    DEGREE  go to state 10
    FACTOR  go to state 11


State 2

   12 FACTOR: T_LOG . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 13


State 3

   11 FACTOR: T_EXP . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 14


State 4

   13 FACTOR: T_SQRT . T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 15


State 5

   15 FACTOR: T_NUMBER .

    $default  reduce using rule 15 (FACTOR)


State 6

   14 FACTOR: T_VARIABLE .

    $default  reduce using rule 14 (FACTOR)


State 7

    0 $accept: ROOT . $end

    $end  shift, and go to state 16


State 8

    1 ROOT: EXPR .
    2 EXPR: EXPR . T_PLUS TERM
    3     | EXPR . T_MINUS TERM

    T_PLUS   shift, and go to state 17
    T_MINUS  shift, and go to state 18

    $default  reduce using rule 1 (ROOT)


State 9

    4 EXPR: TERM .
    5 TERM: TERM . T_TIMES DEGREE
    6     | TERM . T_DIVIDE DEGREE

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 4 (EXPR)


State 10

    7 TERM: DEGREE .

    $default  reduce using rule 7 (TERM)


State 11

    8 DEGREE: FACTOR . T_EXPONENT DEGREE
    9       | FACTOR .

    T_EXPONENT  shift, and go to state 21

    $default  reduce using rule 9 (DEGREE)


State 12

    2 EXPR: EXPR . T_PLUS TERM
    3     | EXPR . T_MINUS TERM
   10 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 22


State 13

   12 FACTOR: T_LOG T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR    go to state 23
    TERM    go to state 9
    DEGREE  go to state 10
    FACTOR  go to state 11


State 14

   11 FACTOR: T_EXP T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR    go to state 24
    TERM    go to state 9
    DEGREE  go to state 10
    FACTOR  go to state 11


State 15

   13 FACTOR: T_SQRT T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    EXPR    go to state 25
    TERM    go to state 9
    DEGREE  go to state 10
    FACTOR  go to state 11


State 16

    0 $accept: ROOT $end .

    $default  accept


State 17

    2 EXPR: EXPR T_PLUS . TERM

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    TERM    go to state 26
    DEGREE  go to state 10
    FACTOR  go to state 11


State 18

    3 EXPR: EXPR T_MINUS . TERM

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    TERM    go to state 27
    DEGREE  go to state 10
    FACTOR  go to state 11


State 19

    5 TERM: TERM T_TIMES . DEGREE

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    DEGREE  go to state 28
    FACTOR  go to state 11


State 20

    6 TERM: TERM T_DIVIDE . DEGREE

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    DEGREE  go to state 29
    FACTOR  go to state 11


State 21

    8 DEGREE: FACTOR T_EXPONENT . DEGREE

    T_LBRACKET  shift, and go to state 1
    T_LOG       shift, and go to state 2
    T_EXP       shift, and go to state 3
    T_SQRT      shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_VARIABLE  shift, and go to state 6

    DEGREE  go to state 30
    FACTOR  go to state 11


State 22

   10 FACTOR: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 10 (FACTOR)


State 23

    2 EXPR: EXPR . T_PLUS TERM
    3     | EXPR . T_MINUS TERM
   12 FACTOR: T_LOG T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 31


State 24

    2 EXPR: EXPR . T_PLUS TERM
    3     | EXPR . T_MINUS TERM
   11 FACTOR: T_EXP T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 32


State 25

    2 EXPR: EXPR . T_PLUS TERM
    3     | EXPR . T_MINUS TERM
   13 FACTOR: T_SQRT T_LBRACKET EXPR . T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 33


State 26

    2 EXPR: EXPR T_PLUS TERM .
    5 TERM: TERM . T_TIMES DEGREE
    6     | TERM . T_DIVIDE DEGREE

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 2 (EXPR)


State 27

    3 EXPR: EXPR T_MINUS TERM .
    5 TERM: TERM . T_TIMES DEGREE
    6     | TERM . T_DIVIDE DEGREE

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 3 (EXPR)


State 28

    5 TERM: TERM T_TIMES DEGREE .

    $default  reduce using rule 5 (TERM)


State 29

    6 TERM: TERM T_DIVIDE DEGREE .

    $default  reduce using rule 6 (TERM)


State 30

    8 DEGREE: FACTOR T_EXPONENT DEGREE .

    $default  reduce using rule 8 (DEGREE)


State 31

   12 FACTOR: T_LOG T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 12 (FACTOR)


State 32

   11 FACTOR: T_EXP T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 11 (FACTOR)


State 33

   13 FACTOR: T_SQRT T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 13 (FACTOR)
